...
            android:textColor="@color/black"
            android:textSize="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"/>

        <Button
            android:id="@+id/find_new_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginRight="30dp"
            android:layout_toLeftOf="@id/top_bar_messages"
            android:backgroundTint="#FF3A3A3A"
            android:text="Find New Friends" />

        <Button
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:id="@+id/top_bar_messages"
            android:contentDescription="Messages"
...
