...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/ScheduleDaily"
    tools:context=".ScheduleDaily">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
...
            android:textStyle="bold"
            android:textSize="17dp"
            android:backgroundTint="@color/black"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/Weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Weekly "
            android:textStyle="bold"
            android:textSize="17dp"
            android:backgroundTint="@color/black"
...
            />

        <TextView
            android:id="@+id/Day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Daily"
            android:textSize="20dp"
            android:textAlignment="center"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
...
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/Cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textStyle="bold"
            android:textSize="20dp"
            android:backgroundTint="@color/black"
...
